# ChangeLog for www-servers/cherokee
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-servers/cvs-repo/gentoo-x86/www-servers/cherokee/ChangeLog,v 1.63 2010/04/21 10:09:50 jokey Exp $

*cherokee-0.99.44 (21 Apr 2010)

  21 Apr 2010; Markus Ullmann <jokey@gentoo.org> +cherokee-0.99.44.ebuild:
  Version bump and drop vulnerable version

*cherokee-0.99.42 (08 Feb 2010)

  08 Feb 2010; J. Alberto Suárez López <bass@gentoo.org>
  -files/cherokee-initd-0.11, -cherokee-0.99.22.ebuild,
  -cherokee-0.99.24.ebuild, +cherokee-0.99.42.ebuild:
  Bump version. Cleanup. Fixed: #303753 #285858 #291633

*cherokee-0.99.30 (30 Nov 2009)

  30 Nov 2009; J. Alberto Suárez López <bass@gentoo.org>
  +cherokee-0.99.30.ebuild:
  bump version

*cherokee-0.99.24 (22 Oct 2009)

  22 Oct 2009; J. Alberto Suárez López <bass@gentoo.org>
  +cherokee-0.99.24.ebuild:
  Bump version. Fix: #283373

*cherokee-0.99.22 (06 Aug 2009)

  06 Aug 2009; J. Alberto Suárez López <bass@gentoo.org>
  +cherokee-0.99.22.ebuild:
  Bump version. Fix: #277076

*cherokee-0.99.19-r1 (28 Jun 2009)

  28 Jun 2009; J. Alberto Suárez López <bass@gentoo.org>
  +cherokee-0.99.19-r1.ebuild:
  Fix log dir perms (drobbins fix)

*cherokee-0.99.19 (24 Jun 2009)

  24 Jun 2009; J. Alberto Suárez López <bass@gentoo.org>
  +cherokee-0.99.19.ebuild:
  Version bump

  22 Jun 2009; J. Alberto Suárez López <bass@gentoo.org>
  cherokee-0.99.17.ebuild:
  Added ~amd64

*cherokee-0.99.17 (22 Jun 2009)

  22 Jun 2009; J. Alberto Suárez López <bass@gentoo.org>
  +cherokee-0.99.17.ebuild:
  New version. Added : fastcgi depend and conversion scripts #270370

*cherokee-0.99.15 (15 May 2009)

  15 May 2009; J. Alberto Suárez López <bass@gentoo.org>
  +cherokee-0.99.15.ebuild:
  Version Bump

  22 Apr 2009; Markus Meier <maekke@gentoo.org> cherokee-0.99.9:
  add ~amd64, bug #265694

*cherokee-0.99.9 (03 Apr 2009)

  03 Apr 2009; J. Alberto Suárez López <bass@gentoo.org>