@@ -2,8 +2,10 @@ AUX cherokee-initd-0.99.23 542 RMD160 e0ee20b7bb781797c3a53d0e2804e8b0fe985beb S
 DIST cherokee-0.99.30.tar.gz 4608868 RMD160 7921cf235079e225f7411b1897226fdcc3464250 SHA1 608e1ce0b067d67d138c4f8329016537dd30dabe SHA256 5395f8bb1b4a9600f688aebea2dded64aa2e9cca4ed2ee7cb40a5d9aa07487c5
 DIST cherokee-0.99.42.tar.gz 5244378 RMD160 1af716a88414ca8c9c38f432cf500989828ba64f SHA1 b5cc065868b565e28c98a4900d3697c03fae1f68 SHA256 66548f100f66197c7b4935a234bcd915d503282bb82b792280e486042931fb1b
 DIST cherokee-0.99.44.tar.gz 6369072 RMD160 cae555b42afee166231bff37e5f53c71e9b455bb SHA1 005b0c9781732cc325c58e61612bd1b97dcea2dc SHA256 1030951ff694d87b4ff22fac9e978bd82e085a5e0466abb881686be3eef87b70
+DIST cherokee-0.99.48.tar.gz 4871636 RMD160 5d4c8b263515aff668668b0b685d0d7baf7ba6b5 SHA1 624e41926527ddafe9e753a9d39be74da69c0cfd SHA256 405c012e05207100ab1a6f18135da330972f17ffe6de5275d659601eab1503b6
 EBUILD cherokee-0.99.30.ebuild 3374 RMD160 056f4b9f797f3477a6a7edf84b02e3e74d33e9a6 SHA1 fbe87d224cb99c6d1ded3dcbfcbf88410f84ffc8 SHA256 61638788132ccc0743542c3a80a493a0028cf96f57ebcdc7d220941066b2481e
 EBUILD cherokee-0.99.42.ebuild 3898 RMD160 94aae50a66f9405afa2f9d605f5f155c343d056a SHA1 d09f2ac977e57a2caaab7df2f69a98112df87810 SHA256 4c6eb36445327e7168953d1cb62ff5a56396a9be3bf2cc80e4767bea9afe83d2
 EBUILD cherokee-0.99.44.ebuild 3898 RMD160 3ae910e22670f339543369eae9fff16310c70212 SHA1 f046f83e606de05538e9e1e302e11025e9a84d95 SHA256 4cd902166e4fcca9f77c8ce500fab32ae7c94a72995c33ef49ef6bdf446c531a
-MISC ChangeLog 16480 RMD160 d1838607a8b0d80d4c8c97c2a1988a01a035adc1 SHA1 817db023d38a2378ff3391ef172cff87a521b2fd SHA256 9a40d99cc993591a07b50806dd967e7e5b915584b7e2a0546dc529b166b5664c
+EBUILD cherokee-0.99.48.ebuild 3897 RMD160 f5097665c8414cfcedf07a909e1fd41d0012a958 SHA1 841fd81a42044e0eb603392afc8a4fdbc25dd192 SHA256 dd343d39ec389af8dfe34df8ae3b4970db28e0af4aca7db0403a33c3efd3944b
+MISC ChangeLog 16615 RMD160 325bdd4d3a856a6d48b8bc649af860d8a7cd750e SHA1 0f15469e167b1634209294c10fcd3d41cc6b0bda SHA256 d96900040980015b073eedb5fe2cce5dd0c626683ac18ab161a782085ee7eb36
 MISC metadata.xml 434 RMD160 bac321b7879fe7793087b221f20554e4b44a5975 SHA1 d77a40137b169af1715d9827f463e2219485a931 SHA256 9cb0163ef5aadb0cafb83c75615bb3f393f5484016695abd15db7ff6d2680f8b
