@@ -1,6 +1,12 @@
 # ChangeLog for www-servers/cherokee
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-servers/cvs-repo/gentoo-x86/www-servers/cherokee/ChangeLog,v 1.63 2010/04/21 10:09:50 jokey Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-servers/cvs-repo/gentoo-x86/www-servers/cherokee/ChangeLog,v 1.64 2010/04/30 09:41:45 bass Exp $
+
+*cherokee-0.99.48 (30 Apr 2010)
+
+  30 Apr 2010; J. Alberto Suárez López <bass@gentoo.org>
+  +cherokee-0.99.48.ebuild:
+  bump version
 
 *cherokee-0.99.44 (21 Apr 2010)
 
